Refactor CSV Download for API for enrollment data