@@ -1,6 +1,7 @@
 package edu.ucsb.cs156.courses.controllers;
 
 import com.opencsv.bean.StatefulBeanToCsvBuilder;
+import com.opencsv.bean.StatefulBeanToCsv;
 import com.opencsv.exceptions.CsvDataTypeMismatchException;
 import com.opencsv.exceptions.CsvRequiredFieldEmptyException;
 import edu.ucsb.cs156.courses.entities.EnrollmentDataPoint;
@@ -27,6 +28,10 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
+import edu.ucsb.cs156.courses.models.EnrollmentCSV;
+import edu.ucsb.cs156.courses.services.EnrollmentCSVService;
+import java.util.stream.Collectors;
+
 
 @Slf4j
 @Tag(name = "API for enrollment data")
@@ -35,6 +40,7 @@ import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBo
 public class EnrollmentController extends ApiController {
 
   @Autowired EnrollmentDataPointRepository enrollmentDataPointRepository;
+  @Autowired private EnrollmentCSVService enrollmentCSVService;
 
   @Operation(
       summary = "Download Enrollment Data as CSV File",
@@ -52,26 +58,21 @@ public class EnrollmentController extends ApiController {
   @GetMapping(value = "/csv/quarter", produces = "text/csv")
   public ResponseEntity<StreamingResponseBody> csvForQuarter(
       @Parameter(name = "yyyyq", description = "quarter in yyyyq format", example = "20252")
-          @RequestParam
-          String yyyyq,
-      @Parameter(
-              name = "testException",
-              description = "test exception (e.g. CsvDataTypeMismatchException)",
-              example = "")
-          @RequestParam(required = false, defaultValue = "")
-          String testException)
-      throws Exception, IOException {
+          @RequestParam String yyyyq) throws IOException {
+      
     StreamingResponseBody stream =
         (outputStream) -> {
           Iterable<EnrollmentDataPoint> iterable = enrollmentDataPointRepository.findByYyyyq(yyyyq);
-          List<EnrollmentDataPoint> list = Streamable.of(iterable).toList();
+          List<EnrollmentCSV> list =
+              Streamable.of(iterable).toList().stream()
+                  .map(enrollmentDataPoint -> EnrollmentCSV.fromEntity(enrollmentDataPoint))
+                  .collect(Collectors.toList());
 
           try (Writer writer = new OutputStreamWriter(outputStream, StandardCharsets.UTF_8)) {
             try {
-              if (testException.equals("CsvDataTypeMismatchException")) {
-                throw new CsvDataTypeMismatchException("test exception");
-              }
-              new StatefulBeanToCsvBuilder<EnrollmentDataPoint>(writer).build().write(list);
+              StatefulBeanToCsv<EnrollmentCSV> beanToCsvWriter =
+                  enrollmentCSVService.getStatefulBeanToCSV(writer);
+              beanToCsvWriter.write(list);
             } catch (CsvDataTypeMismatchException | CsvRequiredFieldEmptyException e) {
               log.error("Error writing CSV file", e);
               throw new IOException("Error writing CSV file: " + e.getMessage());
